fix: unset alignment for new Event section form

--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -69,6 +69,6 @@ form input[type="submit"] {
 
 /* NEW EVENT */
 
-#new-event-section {
+#new-event-section form {
   align-items: unset;
 }
